--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -24,11 +24,11 @@
         <p>{{ site.description | default: site.github.project_tagline }}</p>
         
         {% if site.github.is_user_page %}
-        <p class="view"><a href="{{ site.github.github_url }}">Github</a></p>
+        <img src="{{site.github_logo}}" width="30", height="30"> <p class="view"><a href="{{ site.github.github_url }}">Github</a></p>
         {% endif %}
 
         {% if site.github.is_user_page %}
-        <p class="view"><a href="{{ site.github.linkedin_url }}">LinkedIn</a></p>
+        <img src="{{site.linkedin_logo}}" width="30", height="30"> <p class="view"><a href="{{ site.github.linkedin_url }}">LinkedIn</a></p>
         {% endif %}
       </header>
       <section>
