--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -24,11 +24,11 @@
         <p>{{ site.description | default: site.github.project_tagline }}</p>
         
       <p class="view">
-        <a href="{{ site.github.github_url }}">
+        <a href="{{ site.github_url }}">
           <img src="{{site.github_logo}}" width="30", height="30"> 
         </a>
         
-        <a href="{{ site.github.linkedin_url }}">
+        <a href="{{ site.linkedin_url }}">
           <img src="{{site.linkedin_logo}}" width="30", height="30"> 
         </a>
       </p>
